...
                    contentDescription = "App Logo",
                    modifier =
                        Modifier.testTag("signUpIcon")
                            .size(150.dp) // Adjust the size as per your logo
                            .align(Alignment.CenterHorizontally))
...
                    style = Typography.titleLarge,
                    modifier =
                        Modifier.testTag("signUpProviderTitle").align(Alignment.CenterHorizontally))

                Spacer(modifier = Modifier.height(16.dp))
...
                    leadingIcon = Icons.Default.Person,
                    leadingIconDescription = "Person Icon",
                    testTag = "fullNameInput",
                    errorTestTag = "fullNameErrorProviderRegistration")

                Spacer(modifier = Modifier.height(10.dp))
...
                    leadingIcon = Icons.Default.Phone,
                    leadingIconDescription = "Phone Icon",
                    testTag = "phoneNumberInput",
                    errorTestTag = "phoneNumberErrorProviderRegistration",
                    keyboardType = KeyboardType.Number)

...
                    leadingIcon = Icons.Default.Build,
                    leadingIconDescription = "Company Icon",
                    testTag = "companyNameInput",
                    errorTestTag = "companyNameErrorProviderRegistration")

                Spacer(modifier = Modifier.height(10.dp))
...
                        Modifier.fillMaxWidth()
                            .height(60.dp)
                            .testTag("completeRegistrationButton")
                            .background(
                                if (isFormComplete) {
...
            expanded = servicesExpanded,
            onExpandedChange = { servicesExpanded = !servicesExpanded },
            modifier = Modifier.testTag("servicesDropDown")) {
              OutlinedTextField(
                  value = selectedService,
...
                  expanded = servicesExpanded,
                  onDismissRequest = { servicesExpanded = false },
                  modifier = Modifier.testTag("servicesDropdownMenu")) {
                    services.forEach { service ->
                      DropdownMenuItem(
...
            leadingIcon = Icons.Default.Check,
            leadingIconDescription = "Check Icon",
            testTag = "descriptionInputProviderRegistration",
            errorTestTag = "descriptionErrorInputProviderRegistration")

...
            leadingIcon = Icons.Default.Check,
            leadingIconDescription = "Check Icon",
            testTag = "startingPriceInputProviderRegistration",
            errorTestTag = "startingPriceErrorInputProviderRegistration",
            keyboardType = KeyboardType.Number)
...
            expanded = languagesExpanded,
            onExpandedChange = { languagesExpanded = !languagesExpanded },
            modifier = Modifier.testTag("languageDropdown")) {
              OutlinedTextField(
                  value =
...
                  expanded = languagesExpanded,
                  onDismissRequest = { languagesExpanded = false },
                  modifier = Modifier.fillMaxWidth().testTag("languageDropdownMenu")) {
                    availableLanguages.forEach { language ->
                      val isSelected = language in selectedLanguages
...
            modifier =
                Modifier.fillMaxWidth()
                    .testTag("savePreferencesButton")
                    .background(
                        if (allIsOk) {
...
          Button(
              onClick = { showForm = true },
              modifier = Modifier.fillMaxWidth().height(60.dp).testTag("enterPackagesButton"),
              shape = RoundedCornerShape(12.dp),
              colors = ButtonDefaults.buttonColors(colorScheme.secondary) // Green button
...
