...
        onValueChange = {
          onLocationQueryChange(it)
          onShowDropdownLocationChange(true)
        },
        label = { Text("Address") },
        placeholder = { requestLocation?.name?.let { Text(it) } ?: Text("Enter your address") },
        modifier = Modifier.fillMaxWidth().testTag("inputRequestAddress"),
        singleLine = true)

    DropdownMenu(
        expanded = showDropdownLocation && locationSuggestions.isNotEmpty(),
        onDismissRequest = { onShowDropdownLocationChange(false) },
        properties = PopupProperties(focusable = false),
...
                .heightIn(max = 200.dp)
                .background(MaterialTheme.colorScheme.surface)
                .border(1.dp, MaterialTheme.colorScheme.onSurface, shape = RoundedCornerShape(8.dp))
                .padding(start = 8.dp, end = 8.dp)) {
          locationSuggestions.forEach { location ->
            DropdownMenuItem(
                modifier = Modifier.padding(start = 8.dp, end = 8.dp).testTag("locationResult"),
                text = {
                  Text(
                      text = location.name.take(50) + if (location.name.length > 50) "..." else "",
                      maxLines = 1)
                },
                onClick = {
...
